force-app/main/default/objects/Contact/fields/Aadhaar_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Number__c</fullName>
    <label>Aadhaar Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>