force-app/main/default/objects/Contact/fields/Bday__c.field-meta.xml
<CustomField>
    <fullName>Bday__c</fullName>
    <formula>IF(

AND(
    DAY(TODAY())= DAY( Birthdate ),
    MONTH(TODAY())= MONTH( Birthdate)
),
True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bday</label>
    <type>Checkbox</type>
</CustomField>