force-app/main/default/objects/Contact/fields/Final_Salary__c.field-meta.xml
<CustomField>
    <fullName>Final_Salary__c</fullName>
    <description>This calculates the final salary after deduction of absent days.</description>
    <formula>(Salary__c /30)* Days_Present__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>