force-app/main/default/objects/Contact/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>IF(FirstName != &apos;&apos; || FirstName != Null, FirstName + &apos; &apos; + LastName, LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>