force-app/main/default/objects/Contact/fields/Is_Present__c.field-meta.xml
<CustomField>
    <fullName>Is_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Present?</label>
    <type>Checkbox</type>
</CustomField>