force-app/main/default/objects/Contact/fields/Is_Registered__c.field-meta.xml
<CustomField>
    <fullName>Is_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Registered?</label>
    <type>Checkbox</type>
</CustomField>