force-app/main/default/objects/Contact/fields/Last_Purchased_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchased_Date__c</fullName>
    <label>Last Purchased Date</label>
    <type>Date</type>
</CustomField>