force-app/main/default/objects/Contact/fields/Shop_Pulse_Points__c.field-meta.xml
<CustomField>
    <fullName>Shop_Pulse_Points__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>These ShopPulse points Redeemable(You&apos;ll get The Points According to Your purchase)</inlineHelpText>
    <label>ShopPulse Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>