force-app/main/default/objects/Contact/fields/Total_Amount_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Purchased__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Amount Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>