force-app/main/default/objects/Contact/validationRules/Mobile_no_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_no_validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( MobilePhone )

||

NOT(
REGEX((MobilePhone),&quot;[6-9]{1}[0-9]{9}&quot;)
)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Mobile Number should start with 6,7,8,9 and length should be 10 Numbers</errorMessage>
</ValidationRule>