force-app/main/default/objects/Contact/validationRules/Salary_Should_Not_Be_Greater_Than_10000.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_Should_Not_Be_Greater_Than_10000</fullName>
    <active>true</active>
    <description>Salary should not be greater that 10,000 for employee, it should be greater for manager only</description>
    <errorConditionFormula>Salary__c &gt;10000 &amp;&amp; TEXT( Posting__c )!=&quot;Manager&quot;</errorConditionFormula>
    <errorMessage>Salary Should Not Be Greater Than 10,000 For Employee</errorMessage>
</ValidationRule>