force-app/main/default/objects/Contact/validationRules/Shop_Pulse_Point_Cannot_Be_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Shop_Pulse_Point_Cannot_Be_Null</fullName>
    <active>true</active>
    <errorConditionFormula>Shop_Pulse_Points__c == NULL || ISBLANK(Shop_Pulse_Points__c)</errorConditionFormula>
    <errorMessage>Shop pulse point cannot be null.</errorMessage>
</ValidationRule>