force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>Shop_Pulse_Points__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Customer</value>
    </filters>
    <label>All Contacts</label>
</ListView>