force-app/main/default/objects/Contact/listViews/Employees.listView-meta.xml
<ListView>
    <fullName>Employees</fullName>
    <columns>FULL_NAME</columns>
    <columns>Posting__c</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Days_Present__c</columns>
    <columns>Days_Absent__c</columns>
    <columns>Is_Registered__c</columns>
    <columns>Salary__c</columns>
    <columns>Final_Salary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Employee</value>
    </filters>
    <label>Employees</label>
</ListView>