force-app/main/default/objects/Contact/listViews/MyContacts.listView-meta.xml
<ListView>
    <fullName>MyContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Shop_Pulse_Points__c</columns>
    <columns>Total_Amount_Purchased__c</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Bday__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Customer</value>
    </filters>
    <label>My Customers</label>
</ListView>