force-app/main/default/objects/Contact/listViews/Newly_Created.listView-meta.xml
<ListView>
    <fullName>Newly_Created</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>Aachi</value>
    </filters>
    <label>Newly Created</label>
</ListView>